syntax = "proto3";

option csharp_namespace = "Nmt.Grpc.Protos";
option go_package = "pkg/grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package packets;

service Packets {
  rpc AddPackets(AddPacketsRequest) returns (google.protobuf.Empty);
}

message PacketModel {
  uint32 ip = 1;
  uint32 size = 2;
  uint32 protocol = 3;
  uint32 status = 4;
  google.protobuf.Timestamp created_at = 5;
}

message AddPacketsRequest {
  repeated PacketModel packets = 1;
}
